# cpp-abi-demo

./: README.md  rsync_cmd.sh
clang_test/: CMakeLists.txt  README.md
clang_test/src/: main.cpp
gcc_clang_mix/: README.md
gcc_clang_mix/clang_exe/: CMakeLists.txt  build.sh
gcc_clang_mix/clang_exe/src/: main.cpp
gcc_clang_mix/clang_lib/: CMakeLists.txt
gcc_clang_mix/clang_lib/include/shared/: Hello_clang_lib.h
gcc_clang_mix/clang_lib/src/: Hello.cpp  main.cpp
gcc_clang_mix/clang_lib_2/: CMakeLists.txt
gcc_clang_mix/clang_lib_2/include/shared/: Hello_clang_lib_2.h
gcc_clang_mix/clang_lib_2/src/: Hello.cpp
gcc_clang_mix/gcc_lib/: CMakeLists.txt
gcc_clang_mix/gcc_lib/include/shared/: Hello_gcc_lib.h
gcc_clang_mix/gcc_lib/src/: Hello.cpp
gcc_clang_mix/gcc_lib_2/: CMakeLists.txt
gcc_clang_mix/gcc_lib_2/include/shared/: Hello_gcc_lib_2.h
gcc_clang_mix/gcc_lib_2/src/: Hello.cpp
gcc_test/: README.md
gcc_test/gcc_exe/: CMakeLists.txt  build.sh
gcc_test/gcc_exe/src/: main.cpp
gcc_test/gcc_lib/: CMakeLists.txt
gcc_test/gcc_lib/include/shared/: Hello.h
gcc_test/gcc_lib/src/: Hello.cpp
